--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: LibFM 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-27 10:05+0000\n"
-"Last-Translator: Julien <Julius22@laposte.net>\n"
+"PO-Revision-Date: 2014-03-25 18:03+0000\n"
+"Last-Translator: Pierre <lubuntu@pierregobin.fr>\n"
 "Language-Team: \n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -17,7 +17,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1390817108.0\n"
+"X-POOTLE-MTIME: 1395770631.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -56,7 +56,6 @@ msgstr "<b>Ligne de c_ommande à exécuter :</b>"
 # Vérifier la lettre pour le raccourci clavier
 #: ../data/ui/app-chooser.glade.h:5
 #: ../src/modules/gtk-fileprop-x-desktop.c:275
-#, fuzzy
 msgid "_Browse..."
 msgstr "_Parcourir..."
 
@@ -70,7 +69,6 @@ msgstr "_Exécuter dans un émulateur de terminal"
 #. row 2: "X-KeepTerminal" GtkCheckButton
 #: ../data/ui/app-chooser.glade.h:7
 #: ../src/modules/gtk-fileprop-x-desktop.c:306
-#, fuzzy
 msgid "_Keep terminal window open after command execution"
 msgstr "_Garder la fenêtre de terminal ouverte après l'exécution de la commande"
 
@@ -100,12 +98,10 @@ msgid "Execute custom command line to open files"
 msgstr "Lancer une ligne de commande personnalisée pour ouvrir les fichiers"
 
 #: ../data/ui/app-chooser.glade.h:16
-#, fuzzy
 msgid "C_ustom Command Line"
 msgstr "Ligne de _commande personnalisée"
 
 #: ../data/ui/app-chooser.glade.h:17
-#, fuzzy
 msgid "_Set selected application as default action for this file type"
 msgstr ""
 "Définir l’application _sélectionnée comme celle par défaut pour ouvrir ce "
@@ -143,7 +139,6 @@ msgid "with the following file?"
 msgstr "avec le fichier suivant ?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File name:"
 msgstr "Nom du _fichier :"
 
@@ -157,15 +152,13 @@ msgstr "Choisissez une icône..."
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:3
-#, fuzzy
 msgid "system icon theme"
-msgstr "Thème d'icônes du système"
+msgstr "thème d'icônes du système"
 
 #. genitive case is here: Choose icon from: ...
 #: ../data/ui/choose-icon.ui.h:5
-#, fuzzy
 msgid "image files"
-msgstr "Fichiers _images"
+msgstr "fichiers image"
 
 #: ../data/ui/choose-icon.ui.h:6
 msgid "<b>Choose icon from:</b>"
@@ -184,7 +177,6 @@ msgid "File Properties"
 msgstr "Propriétés du fichier"
 
 #: ../data/ui/file-prop.glade.h:2
-#, fuzzy
 msgid "Icon of the file in folder view"
 msgstr "Icône du fichier dans la vue du répertoire"
 
@@ -308,7 +300,6 @@ msgid "None"
 msgstr "Aucun"
 
 #: ../data/ui/file-prop.glade.h:32
-#, fuzzy
 msgctxt ""
 "It is a directory access bit - 'sticky' - where only owner can delete a file "
 "from it"
@@ -320,7 +311,6 @@ msgid "Set GID"
 msgstr "Définir le GID"
 
 #: ../data/ui/file-prop.glade.h:34
-#, fuzzy
 msgid "Sticky & set GID"
 msgstr "Permanent & définir le GID"
 
@@ -369,7 +359,6 @@ msgid "GB"
 msgstr "Go"
 
 #: ../data/ui/filesearch.glade.h:5
-#, fuzzy
 msgid "Choose Date"
 msgstr "Sélectionner une date"
 
@@ -386,14 +375,13 @@ msgid "<b>File _Name Patterns:</b>"
 msgstr "<b>Patrons de _noms de fichiers :</b>"
 
 #: ../data/ui/filesearch.glade.h:9
-#, fuzzy
 msgid ""
 "Pattern may be either POSIX shell pattern list (with ',' as separator) or "
 "POSIX regular expression."
 msgstr ""
-"Le patron peut soit être une liste de patrons d'invite de commande Posix "
-"(avec une virgule comme séparateur), soit être une expression Posix "
-"régulière."
+"Le modèle peut soit être une liste de modèles d'invite de commande POSIX "
+"(avec une virgule comme séparateur), soit être une expression régulière "
+"POSIX."
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
@@ -452,9 +440,8 @@ msgid "Folde_rs"
 msgstr "Répe_rtoires"
 
 #: ../data/ui/filesearch.glade.h:24
-#, fuzzy
 msgid "Ot_her:"
-msgstr "Autre :"
+msgstr "_Autre :"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid ""
@@ -471,9 +458,8 @@ msgstr "_Type de fichier"
 
 # Vérifier la lettre pour le raccourci clavier
 #: ../data/ui/filesearch.glade.h:27
-#, fuzzy
 msgid "<b>File Contain_s:</b>"
-msgstr "<b>Le fichier contient :</b>"
+msgstr "<b>Le fichier _contient :</b>"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "C_ontent"
@@ -570,11 +556,13 @@ msgid "<b>Errors occurred:</b>"
 msgstr "<b>Des erreurs sont survenues :</b>"
 
 #: ../src/base/fm-file-launcher.c:85
+#, c-format
 #, c-format, c-format
 msgid "Invalid desktop entry file: '%s'"
 msgstr "Fichier d'entrée de bureau invalide : '%s'"
 
 #: ../src/base/fm-file-launcher.c:240
+#, c-format
 #, c-format, c-format
 msgid "No default application is set to launch URIs %s://"
 msgstr "Aucune application par défaut n'est définie pour lancer les URIs %s://"
@@ -761,6 +749,7 @@ msgid "Customize"
 msgstr "Personnaliser"
 
 #: ../src/gtk/fm-app-chooser-dlg.c:266
+#, c-format
 #, c-format, c-format
 msgid "<b>Select an application to open \"%s\" files</b>"
 msgstr "<b>Sélectionnez une application pour ouvrir les fichiers « %s »</b>"
@@ -782,18 +771,16 @@ msgid "Shows tree of directories in sidebar"
 msgstr "Affiche l'arbre des dossiers dans la barre latérale"
 
 #: ../src/gtk/fm-dnd-dest.c:412
-#, fuzzy
 msgid "_Cancel"
-msgstr "Annuler"
+msgstr "A_nnuler"
 
 #: ../src/gtk/fm-dnd-dest.c:413
 msgid "C_opy Here"
 msgstr "C_opier ici"
 
 #: ../src/gtk/fm-dnd-dest.c:414
-#, fuzzy
 msgid "_Move Here"
-msgstr "Déplacer ici"
+msgstr "_Déplacer ici"
 
 #. Note to translators: Link in not noun but verb here
 #: ../src/gtk/fm-dnd-dest.c:416
@@ -813,24 +800,20 @@ msgid "Open _With..."
 msgstr "Ouvrir a_vec..."
 
 #: ../src/gtk/fm-file-menu.c:153
-#, fuzzy
 msgid "Open _With"
 msgstr "Ouvrir a_vec"
 
 #: ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Copy Pa_th(s)"
-msgstr "Copier le(s) chemin(s)"
+msgstr "Copier le(s) c_hemin(s)"
 
 #: ../src/gtk/fm-file-menu.c:159
-#, fuzzy
 msgid "H_ide"
-msgstr "Cacher"
+msgstr "_Cacher"
 
 #: ../src/gtk/fm-file-menu.c:160
-#, fuzzy
 msgid "Unh_ide"
-msgstr "Montrer"
+msgstr "_Montrer"
 
 #: ../src/gtk/fm-file-menu.c:161
 msgid "_Add to Bookmarks"
@@ -859,9 +842,8 @@ msgstr "Propri_étés"
 
 #. Note to translators: Trash in not noun but verb here
 #: ../src/gtk/fm-file-menu.c:265 ../src/gtk/fm-file-menu.c:525
-#, fuzzy
 msgid "Move to _Trash"
-msgstr "Mettre à la corbeille"
+msgstr "Mettre à la cor_beille"
 
 #: ../src/gtk/fm-file-menu.c:773
 msgid "Your bookmarks already have a bookmark for this folder."
@@ -1102,11 +1084,13 @@ msgid "Only system administrators have the permission to do this."
 msgstr "Seuls les administrateurs système ont le droit de faire ceci."
 
 #: ../src/gtk/fm-gtk-utils.c:923
+#, c-format
 #, c-format, c-format
 msgid "Do you want to move the file '%s' to trash can?"
 msgstr "Voulez-vous mettre le fichier « %s » à la corbeille ?"
 
 #: ../src/gtk/fm-gtk-utils.c:928
+#, c-format
 #, c-format, c-format
 msgid "Do you want to move the %d selected file to trash can?"
 msgid_plural "Do you want to move the %d selected files to trash can?"
@@ -1114,11 +1098,13 @@ msgstr[0] "Voulez-vous mettre le fichier %d sélectionné à la corbeille ?"
 msgstr[1] "Voulez-vous mettre les fichiers %d sélectionnés à la corbeille ?"
 
 #: ../src/gtk/fm-gtk-utils.c:988
+#, c-format
 #, c-format, c-format
 msgid "Do you want to delete the file '%s'?"
 msgstr "Voulez-vous supprimer le fichier « %s » ?"
 
 #: ../src/gtk/fm-gtk-utils.c:993
+#, c-format
 #, c-format, c-format
 msgid "Do you want to delete the %d selected file?"
 msgid_plural "Do you want to delete the %d selected files?"
@@ -1138,7 +1124,6 @@ msgid "Are you sure you want to empty the trash can?"
 msgstr "Êtes-vous sûr de vouloir vider la corbeille ?"
 
 #: ../src/gtk/fm-path-entry.c:668
-#, fuzzy
 msgid "Pa_ste and Go"
 msgstr "Coller et pour_suivre"
 
@@ -1187,15 +1172,13 @@ msgstr "_Renommer le signet"
 
 # Vérifier la lettre utilisée pour le raccourci clavier
 #: ../src/gtk/fm-places-view.c:151
-#, fuzzy
 msgid "Re_move from Bookmarks"
-msgstr "Re_tirer des signets"
+msgstr "Ret_irer des signets"
 
 # Voir quelle lettre utiliser pour le raccourci clavier
 #: ../src/gtk/fm-places-view.c:152
-#, fuzzy
 msgid "Move Bookmark _Up"
-msgstr "Monter le signet"
+msgstr "_Monter le signet"
 
 #: ../src/gtk/fm-places-view.c:153
 msgid "Move Bookmark _Down"
@@ -1333,6 +1316,7 @@ msgstr "Restaure"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:624
+#, c-format
 #, c-format, c-format
 msgid "%s files"
 msgstr "%s les fichiers"
@@ -1343,21 +1327,22 @@ msgstr "<b>L'opération sur les fichiers est en cours...</b>"
 
 #. note to translators: resulting string is such as "Deleting file"
 #: ../src/gtk/fm-progress-dlg.c:633
+#, c-format
 #, c-format, c-format
 msgid "<b>%s file:</b>"
 msgstr "<b>%s le fichier :</b>"
 
 #. note to translators: resulting string is such as "Deleting files"
 #: ../src/gtk/fm-progress-dlg.c:636
+#, c-format
 #, c-format, c-format
 msgid "<b>%s files:</b>"
 msgstr "<b>%s les fichiers :</b>"
 
 # Voir quelle lettre utiliser pour le raccourci clavier
 #: ../src/gtk/fm-side-pane.c:66
-#, fuzzy
 msgid "_Off"
-msgstr "Éteint"
+msgstr "Étei_nt"
 
 #: ../src/gtk/fm-side-pane.c:67
 msgid "_Places"
@@ -1370,7 +1355,6 @@ msgstr "Ar_borescence"
 
 # Voir quelle lettre utiliser pour le raccourci clavier
 #: ../src/gtk/fm-side-pane.c:69
-#, fuzzy
 msgid "_Remote"
 msgstr "_Distant"
 
@@ -1393,14 +1377,12 @@ msgid "_Hide %s"
 msgstr "Cac_her %s"
 
 #: ../src/gtk/fm-standard-view.c:839
-#, fuzzy
 msgid "_Move Left"
-msgstr "Déplacer à gauche"
+msgstr "Déplacer à _gauche"
 
 #: ../src/gtk/fm-standard-view.c:845
-#, fuzzy
 msgid "Move _Right"
-msgstr "Déplacer à droite"
+msgstr "Déplacer à _droite"
 
 #: ../src/gtk/fm-standard-view.c:868
 #, c-format
@@ -1408,9 +1390,8 @@ msgid "Show %s"
 msgstr "Afficher %s"
 
 #: ../src/gtk/fm-standard-view.c:880
-#, fuzzy
 msgid "_Forget Width"
-msgstr "Oublier la largeur"
+msgstr "_Oublier la largeur"
 
 #: ../src/gtk/fm-standard-view.c:1854
 msgid "_Icon View"
@@ -1421,9 +1402,8 @@ msgid "_Compact View"
 msgstr "Vue _compacte"
 
 #: ../src/gtk/fm-standard-view.c:1856
-#, fuzzy
 msgid "_Thumbnail View"
-msgstr "Vue en vignettes"
+msgstr "Vue en _vignettes"
 
 #: ../src/gtk/fm-standard-view.c:1857
 msgid "Detailed _List View"
@@ -1435,6 +1415,7 @@ msgstr "Change l'onglet actif"
 
 #: ../src/job/fm-dir-list-job.c:237 ../src/job/fm-dir-list-job.c:250
 #: ../src/job/fm-dir-list-job.c:362
+#, c-format
 #, c-format, c-format
 msgid "The specified directory '%s' is not valid"
 msgstr "Le répertoire « %s » indiqué n'est pas valide"
@@ -1448,6 +1429,7 @@ msgid "Cannot create a link on non-native filesystem"
 msgstr "Impossible de créer un lien dans un système de fichiers non natif"
 
 #: ../src/job/fm-file-ops-job-delete.c:489
+#, c-format
 #, c-format, c-format
 msgid "Cannot untrash file '%s': original path not known"
 msgstr ""
@@ -1470,6 +1452,7 @@ msgid "Destination is a sub folder of source"
 msgstr "La destination est un sous-répertoire de la source"
 
 #: ../src/job/fm-file-ops-job-xfer.c:380
+#, c-format
 #, c-format, c-format
 msgid "Cannot copy file '%s': not supported"
 msgstr "Impossible de copier le fichier « %s » : non pris en charge"
@@ -1523,6 +1506,7 @@ msgid "Menu item name cannot be empty"
 msgstr "Un nom d'élément de menu ne peut pas être vide"
 
 #: ../src/modules/vfs-menu.c:1507
+#, c-format
 #, c-format, c-format
 msgid "Invalid menu directory '%s'"
 msgstr "Menu de répertoire « %s » invalide"
@@ -1543,21 +1527,25 @@ msgstr ""
 "menu"
 
 #: ../src/modules/vfs-menu.c:1978
+#, c-format
 #, c-format, c-format
 msgid "Setting attribute '%s' not supported"
 msgstr "La définition de l'attribut « %s » n'est pas prise en charge"
 
 #: ../src/modules/vfs-menu.c:1988
+#, c-format
 #, c-format, c-format
 msgid "Invalid value for attribute '%s'"
 msgstr "Valeur incorrecte pour l'attribut « %s »"
 
 #: ../src/modules/vfs-menu.c:2025
+#, c-format
 #, c-format, c-format
 msgid "The '%s' is a menu directory"
 msgstr "Le « %s » n'est pas un répertoire de menu"
 
 #: ../src/modules/vfs-menu.c:2028 ../src/modules/vfs-menu.c:2657
+#, c-format
 #, c-format, c-format
 msgid "The '%s' isn't a menu item"
 msgstr "Le « % » n'est pas un élément de menu"
@@ -1568,6 +1556,7 @@ msgid "The '%s' entry file is broken"
 msgstr "Le fichier d'entrée « %s » est cassé"
 
 #: ../src/modules/vfs-menu.c:2338 ../src/modules/vfs-menu.c:2427
+#, c-format
 #, c-format, c-format
 msgid "Cannot create menu item '%s'"
 msgstr "Impossible de créer l'élément de menu « %s »"
@@ -1596,12 +1585,10 @@ msgid "Search"
 msgstr "Rechercher"
 
 #: ../src/modules/vfs-search.c:1052
-#, fuzzy
 msgid "Search Results"
 msgstr "Résultats de la recherche"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:66
-#, fuzzy
 msgid "Choose Executable File"
 msgstr "Choisissez un fichier exécutable"
 
@@ -1627,9 +1614,8 @@ msgstr "Nom générique de l'application"
 
 # Vérifier la lettre pour le raccourci clavier
 #: ../src/modules/gtk-fileprop-x-desktop.c:340
-#, fuzzy
 msgid "<b>_Working directory:</b>"
-msgstr "<b>Répertoire de travail :</b>"
+msgstr "<b>Répertoire de _travail :</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:351
 msgid "The working directory to run the program in"
@@ -1637,9 +1623,8 @@ msgstr "Le répertoire de travail dans lequel exécuter le programme"
 
 # Vérifier la lettre pour le raccourci clavier
 #: ../src/modules/gtk-fileprop-x-desktop.c:359
-#, fuzzy
 msgid "<b>_Tooltip:</b>"
-msgstr "<b>Infobulle :</b>"
+msgstr "<b>_Infobulle :</b>"
 
 #: ../src/modules/gtk-fileprop-x-desktop.c:369
 msgid "Tooltip to show on application"
