--- a/po/nl.po
+++ b/po/nl.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: libfm 1.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-01-11 15:20+0200\n"
-"PO-Revision-Date: 2014-01-28 09:38+0000\n"
+"PO-Revision-Date: 2014-04-21 09:40+0000\n"
 "Last-Translator: Pjotr <pjotrvertaalt@gmail.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -16,7 +16,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.5.0\n"
-"X-POOTLE-MTIME: 1390901887.0\n"
+"X-POOTLE-MTIME: 1398073241.0\n"
 
 #: ../data/libfm-pref-apps.desktop.in.h:1 ../data/ui/preferred-apps.glade.h:1
 msgid "Preferred Applications"
@@ -968,8 +968,7 @@ msgstr "Bestanden en mappen vermengen"
 
 #: ../src/gtk/fm-folder-view.c:208
 msgid "_Ignore Name Case"
-msgstr ""
-"Bij een naam niet letten op verschil tussen hoofdletters en kleine letters"
+msgstr "Negeer verschil hoofdletters/kleine letters"
 
 #: ../src/gtk/fm-folder-view.c:219
 msgid "By _Name"
